# jm-view

./: .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/requirements/: REQ-20260310-jm-view.md
docs/spikes/: spike-cm6-cursor.md
docs/test-cases/: sync-e2e.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: CrashRecoveryDialog.tsx  LargeFileProgress.tsx  ThemeToggle.tsx
src/components/blocks/: AudioBlock.tsx  BlockRegistry.tsx  CalloutBlock.tsx  CodeBlock.tsx  ColorBlock.tsx  DateBlock.tsx  DividerBlock.tsx  EmbedBlock.tsx  FileBlock.tsx  HeadingBlock.tsx  ImageBlock.tsx  LatexBlock.tsx  LinkBlock.tsx  MathBlock.tsx  MentionBlock.tsx  MermaidBlock.tsx  MetaBlock.tsx  NoteBlock.tsx  PlaceholderBlock.tsx  QuoteBlock.tsx  TipBlock.tsx  ToggleBlock.tsx  VideoBlock.tsx  WarningBlock.tsx  index.ts  registry.ts  types.ts  utils.ts
src/components/editor/: JsonPanel.tsx  (+2 more)
src/hooks/: useDraftAutosave.ts  useFileOps.ts  useLargeFileLoader.ts  useStartupFile.ts
src/store/: document-store.ts  shortcut-store.ts  tab-store.ts  theme-store.ts
src/types/: blocks.ts  json-ast.ts
src/utils/: array-detect.ts  block-parser.ts  html-export.ts  ipc.ts  json-validator.ts  markdown-export.ts  markdown-import.ts  pdf-export.ts
tests/: setup.ts
tests/unit/: document-store.test.ts  outline-panel.test.tsx  use-file-ops.test.ts  useFileOps.test.ts  visual-canvas.test.tsx
(+32 files in other folders)
